# cm-editor

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/app/commands/file/: commands.rs
src-tauri/src/app/commands/system/: commands.rs
src-tauri/src/core/file/: model.rs
src-tauri/src/use_cases/file/: file.rs
src/contexts/: DatabaseContext.tsx
src/routes/: appRoutes.tsx
src/screens/: Home.tsx
src/screens/Home/: Home.tsx
src/screens/Home/components/: entities.tsx  entitiesData.tsx  menubar.tsx
