[package]
name = "cm-editor"
license = "MIT"
edition = "2021"
version = "1.0.0"
readme = "README.md"
keywords = ["gamedev", "rust", "editro", "football"]
repository = "https://github.com/ovasconceloss/cm-editor"
description = "a database editor (sqlite) for champions manager"
authors = ["Victor Vasconcelos <victorolimpiovasconcelos.dev@gmail.com>"]

[lib]
name = "cm_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.41"
rand = "0.9.1"
uuid = "1.17.0"
dirs = "6.0.0"
